...
  @override
  Widget build(BuildContext context) {
    final transactionType =
        context.watch<TransactionTypeProvider>().transactionType ==
            TransactionType.expense
        ? "Pengeluaran"
        : "Pemasukan";
    return Scaffold(
      appBar: AppBar(
        title: Text(
          "Tambah Data Cash flow",
          style: Theme.of(context).textTheme.titleLarge,
        ),
...
                    return null;
                  },
                  onChange: (value) => _keyNote.currentState?.validate(),
                ),
                SizedBox(height: 50),
                ButtonWidget(
                  title: "Tambahkan Data",
                  isLoading: _isLoading,
                  textColor: AppColors.btnTextWhite.colors,
                  foregroundColor: AppColors.bgSoftGreen.colors,
                  backgroundColor: AppColors.bgGreen.colors,
                  onPressed: () {
                    if (_formKey.currentState!.validate()) {
...
